--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <title>Discord</title>
 </head>
 <body>
+    <!-- inizio header -->
+    <header>
+
+        <!-- inizio navigation bar -->
+        <nav>
+
+        </nav>
+
+        <!-- inizio hero section -->
+        <div>
+            
+        </div>
+
+    </header>
+
+    <!-- inizio main -->
+    <main>
+
+    </main>
+
+    <!-- inizio footer -->
+    <footer>
+
+    </footer>
     
 </body>
 </html>
