--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
         <!-- inizio navigation bar -->
         <nav>
-
+            <section class="container">
+                
+            </section>
         </nav>
 
         <!-- inizio hero section -->
         <div>
-            
+
         </div>
 
     </header>
