html-navigation-bar-set

--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
 
         <!-- inizio navigation bar -->
         <nav>
-            <section class="container">
-                
+            <section class="container d-flex-center">
+                <img src="img/logo.svg" alt="logo">
+                <ul class="d-flex-center">
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+                <a href="">Accedi</a>
             </section>
         </nav>
 
