html-hero-section-set

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <!-- inizio navigation bar -->
         <nav>
-            <section class="container d-flex-center">
+            <section class="container d-flex-nav">
                 <img src="img/logo.svg" alt="logo">
-                <ul class="d-flex-center">
+                <ul class="d-flex-nav">
                     <li><a href="">Scarica</a></li>
                     <li><a href="">Perché Discord</a></li>
                     <li><a href="">Nitro</a></li>
@@ -30,7 +30,21 @@
         </nav>
 
         <!-- inizio hero section -->
-        <div>
+        <div id="hero-img">
+            <div class="container d-flex-hero">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu facci aparte di un club scolastico, gruppo di gamer, comunità artistica mondiale,
+                <br>
+                o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+                <br>
+                Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                </p>
+                <div>
+                    <a href="">Scarica per mac</a>
+                    <a href="">Apri discord nel tuo browser</a>
+                </div>
+
+            </div>
 
         </div>
 
