--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="">Sicurezza</a></li>
                     <li><a href="">Assistenza</a></li>
                 </ul>
-                <a href="">Accedi</a>
+                <a href="" class="button-white button-small">Accedi</a>
             </section>
         </nav>
 
