discord-header-completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700;800;900&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Discord</title>
 </head>
 <body>
@@ -25,12 +27,12 @@
                     <li><a href="">Sicurezza</a></li>
                     <li><a href="">Assistenza</a></li>
                 </ul>
-                <a href="" class="button-white button-small">Accedi</a>
+                <a href="" class="button-light button-small">Accedi</a>
             </section>
         </nav>
 
         <!-- inizio hero section -->
-        <div id="hero-img">
+        <div class="hero-section" id="hero-img">
             <div class="container d-flex-hero">
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu facci aparte di un club scolastico, gruppo di gamer, comunità artistica mondiale,
@@ -40,8 +42,9 @@
                 Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
                 <div>
-                    <a href="">Scarica per mac</a>
-                    <a href="">Apri discord nel tuo browser</a>
+                    <a href="" class="button-large button-light"><i class="fa-solid fa-download" style="color: #000000;"></i>Scarica per mac</a>
+                    <a href="" class="button-large button-dark">Apri discord nel tuo browser</a>
+                    
                 </div>
 
             </div>
