header-completed-mk2

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <section class="container d-flex-nav">
                 <img src="img/logo.svg" alt="logo">
                 <ul class="d-flex-nav">
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perché Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
+                    <li><a href="" class="a-hover">Scarica</a></li>
+                    <li><a href="" class="a-hover">Perché Discord</a></li>
+                    <li><a href="" class="a-hover">Nitro</a></li>
+                    <li><a href="" class="a-hover">Sicurezza</a></li>
+                    <li><a href="" class="a-hover">Assistenza</a></li>
                 </ul>
                 <a href="" class="button-light button-small">Accedi</a>
             </section>
@@ -42,7 +42,7 @@
                 Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
                 <div>
-                    <a href="" class="button-large button-light"><i class="fa-solid fa-download" style="color: #000000;"></i>Scarica per mac</a>
+                    <a href="" class="button-large button-light"><i class="fa-solid fa-download"></i>Scarica per mac</a>
                     <a href="" class="button-large button-dark">Apri discord nel tuo browser</a>
                     
                 </div>
