main-html-css-completed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="white-background">
             <section class="container content-section d-flex-main">
                 <div class="image-flex-section">
-                    <img src="img/item1.svg" alt="group chat">
+                    <img src="img/item1.svg" alt="group chat" class="img-full-width">
                 </div>
                 <article class="article-flex-section">
                     <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
@@ -73,7 +73,7 @@
         <div class="gray-background">
             <section class="container content-section d-flex-main row-reverse">
                 <div class="image-flex-section">
-                    <img src="img/item2.svg" alt="channel navigation bar">
+                    <img src="img/item2.svg" alt="channel navigation bar" class="img-full-width">
                 </div>
                 <article class="article-flex-section">
                     <h2>Dove trovarsi è facile</h2>
@@ -85,7 +85,7 @@
         <div class="white-background">
             <section class="container content-section d-flex-main">
                 <div class="image-flex-section">
-                    <img src="img/item3.svg" alt="moderation tools">
+                    <img src="img/item3.svg" alt="moderation tools" class="img-full-width">
                 </div>
                 <article class="article-flex-section">
                     <h2>Da pochi a un fandom</h2>
@@ -97,11 +97,20 @@
         <div class="gray-background">
 
             <section class="container content-section">
-    
+                <div class="description-container">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitebi in una sessione di disegno con la ocndivisione schermo</p>
+                </div>
+                <img src="img/item4-big.svg" alt="chat preview" class="img-full-width">
             </section>
 
             <section class="container download-section">
-    
+                <div class="starred">
+                    <h4>Pronto a iniziare la tua avventura?</h4>
+                </div>
+                <div>
+                    <a href="" class="button-large button-primary-light"><i class="fa-solid fa-download"></i>Scarica per mac</a>            
+                </div>
             </section>
 
         </div>
