footer-html-css-update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero-section" id="hero-img">
             <div class="container d-flex-hero">
                 <h1>Il tuo posto per parlare</h1>
-                <p>Che tu facci aparte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
                 <div>
                     <a href="" class="button-large button-light"><i class="fa-solid fa-download"></i>Scarica per mac</a>
@@ -120,6 +120,69 @@
     <!-- inizio footer -->
     <footer>
 
+        <div class="container">
+            <div  class="footer-container d-flex-footer">
+
+                <section class="info-box-container">
+                    <h4>Il tuo posto per parlare</h4>
+                    <div class="select-language">
+                        <img src="img/ita.png" alt="ita flag">
+                        <select name="language" id="language">
+                            <option value="italiano">italiano</option>
+                            <option value="deutsch">deutsch</option>
+                            <option value="english">english</option>
+                        </select>
+                    </div>
+                    <div class="social-icons">
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </section>
+
+                <section class="link-container d-flex-footer-link">
+                    <ul><span>Prodotto</span>
+                        <li><a href="" class="a-hover">Scarica</a></li>
+                        <li><a href="" class="a-hover">Perché Discord</a></li>
+                        <li><a href="" class="a-hover">Nitro</a></li>
+                        <li><a href="" class="a-hover">Sicurezza</a></li>
+                        <li><a href="" class="a-hover">Assistenza</a></li>
+                    </ul>
+                    <ul><span>Compagnia</span>
+                        <li><a href="" class="a-hover">Chi siamo</a></li>
+                        <li><a href="" class="a-hover">Lavora con noi</a></li>
+                        <li><a href="" class="a-hover">Marchio</a></li>
+                        <li><a href="" class="a-hover">Redazione</a></li>
+                        <li><a href="" class="a-hover">Negozio</a></li>
+                    </ul>
+                    <ul><span>Risorse</span>
+                        <li><a href="" class="a-hover">Scarica</a></li>
+                        <li><a href="" class="a-hover">Perché Discord</a></li>
+                        <li><a href="" class="a-hover">Nitro</a></li>
+                        <li><a href="" class="a-hover">Sicurezza</a></li>
+                        <li><a href="" class="a-hover">Assistenza</a></li>
+                        <li><a href="" class="a-hover">Scarica</a></li>
+                        <li><a href="" class="a-hover">Perché Discord</a></li>
+                        <li><a href="" class="a-hover">Nitro</a></li>
+                        <li><a href="" class="a-hover">Sicurezza</a></li>
+                        <li><a href="" class="a-hover">Assistenza</a></li>
+                    </ul>
+                    <ul><span>Norme</span>
+                        <li><a href="" class="a-hover">Scarica</a></li>
+                        <li><a href="" class="a-hover">Perché Discord</a></li>
+                        <li><a href="" class="a-hover">Nitro</a></li>
+                        <li><a href="" class="a-hover">Sicurezza</a></li>
+                        <li><a href="" class="a-hover">Assistenza</a></li>
+                    </ul>
+                    
+                </section>
+            </div>
+            <aside>
+
+            </aside>
+
+        </div>
     </footer>
     
 </body>
