--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- inizio navigation bar -->
         <nav>
             <section class="container d-flex-nav">
-                <img src="img/logo.svg" alt="logo">
+                <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                 <ul class="d-flex-nav">
                     <li><a href="" class="a-hover">Scarica</a></li>
                     <li><a href="" class="a-hover">Perché Discord</a></li>
@@ -109,7 +109,7 @@
                     <h4>Pronto a iniziare la tua avventura?</h4>
                 </div>
                 <div>
-                    <a href="" class="button-large button-primary-light"><i class="fa-solid fa-download"></i>Scarica per mac</a>            
+                    <a href="" class="button-large button-primary-dark"><i class="fa-solid fa-download"></i>Scarica per mac</a>            
                 </div>
             </section>
 
@@ -178,7 +178,9 @@
                     
                 </section>
             </div>
-            <aside>
+            <aside class="d-flex-footer">
+                <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+                <a href="" class="button-primary-dark button-small">Registrati</a>
 
             </aside>
 
